fix(video): update consent spacing

--- a/elements/rh-video/rh-video.css
+++ b/elements/rh-video/rh-video.css
@@ -71,16 +71,26 @@ figure.dark {
   line-height: var(--rh-line-height-heading, 1.3);
 }
 
-@container consent (min-width: 576px) {
-  #consent-message {
-    font-size: var(--rh-font-size-heading-sm, 1.5rem);
-  }
-}
-
 figure,
 #consent-message,
 ::slotted([slot="consent-message"]:last-of-type) {
-  margin-block-end: var(--rh-space-xl, 24px);
+  margin-block-end: var(--rh-space-lg, 16px);
+}
+
+@container consent (min-width: 576px) {
+  figure,
+  #consent-message,
+  ::slotted([slot="consent-message"]:last-of-type) {
+    margin-block-end: var(--rh-space-xl, 24px);
+  }
+
+  #consent-body {
+    padding: var(--rh-space-xl, 24px);
+  }
+
+  #consent-message {
+    font-size: var(--rh-font-size-heading-sm, 1.5rem);
+  }
 }
 
 #play {
